--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,14 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:500);
 
 
-* {
+/* * {
   background-color: #F7F5EC;
-}
+} */
 
 .App {
   text-align: center;
   padding: 2% 5%;
+  background-color: #F7F5EC;
 }
 
 .App * {
@@ -157,7 +158,7 @@ input[type="number"] {
   overflow: visible;
 }
 
-.login-button {
+/* .login-button {
   color: #494949;
   text-transform: uppercase;
   text-decoration: none;
@@ -168,18 +169,18 @@ input[type="number"] {
   transition: all 0.4s ease 0s;
   min-width: 10rem;
   margin: 1rem;
-}
+} */
 
-.google-btn {
+/* .google-btn {
   width: 184px;
   height: 42px;
   margin: 1rem;
   background-color: #4285f4;
   border-radius: 2px;
   box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
-}
+} */
 
-.google-btn:hover {
+/* .google-btn:hover {
   box-shadow: 0 0 6px #4285f4;
 }
 
@@ -203,16 +204,16 @@ input[type="number"] {
   margin-left: -8px;
   width: 18px;
   height: 18px;
-}
+} */
 
-.btn-text {
+/* .btn-text {
   float: right;
   margin: 11px 11px 0 0;
   color: #fff;
   font-size: 14px;
   letter-spacing: 0.2px;
   font-family: "Roboto";
-}
+} */
 
 button {
   border: none;
