--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,10 @@ input[type="number"] {
   position: relative;
 }
 
+.WelcomeScreen {
+  background-color: inherit;
+}
+
 .suggestions {
   width: 250px;
   position: absolute;
